<resources>
    <string name="app_name">CurriculumVitae</string>
    <string name="about_me">About me</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="empty_view_message"><b>Sorry!</b><br/>\nSomething went wrong. Please try again.</string>
    <string name="summary">Summary</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nis</string>
    <string name="phone_number">Phone: %1$s</string>
    <string name="email_address">E-mail: %1$s</string>
    <string name="experience">Experience</string>
    <string name="company_icon">Company icon</string>
    <string name="developedApps">Developed applications:</string>
    <string name="start_date">From: %1$s</string>
    <string name="end_date">to: %1$s</string>
    <string name="present">present</string>
    <string name="my_articles">My articles</string>
    <string name="my_linkedin_profile">My LinkedIn Profile</string>
    <string name="my_name">Ewa Wywrot</string>
</resources>