<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_me"
            android:icon="@drawable/ic_baseline_account_circle_white_24"
            android:title="@string/about_me" />

        <item
            android:id="@+id/experience"
            android:icon="@drawable/ic_account_star_white_24"
            android:title="@string/experience" />

        <item
            android:id="@+id/articles"
            android:icon="@drawable/ic_baseline_library_books_white_24"
            android:title="@string/my_articles" />

        <item
            android:id="@+id/linkedin"
            android:icon="@drawable/ic_linkedin_white_24"
            android:title="@string/my_linkedin_profile" />
    </group>
</menu>